<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textintro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:text="@string/friends_app"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/image_amit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textintro"
                app:srcCompat="@drawable/amit" />

            <TextView
                android:id="@+id/text_amit"
                android:layout_width="39dp"
                android:layout_height="11dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/amit_saini"
                android:textSize="7sp"
                app:layout_constraintStart_toEndOf="@+id/image_amit"
                app:layout_constraintTop_toBottomOf="@+id/textintro"
                tools:ignore="SmallSp" />


            <TextView
                android:id="@+id/text_amit_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="4dp"
                android:text="@string/hello_hi"
                android:textSize="6sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_amit"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="27dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_amit"
                app:srcCompat="@drawable/hardeep" />

            <TextView
                android:id="@+id/text_hardeep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:text="@string/hardeep_singh"
                android:textSize="7sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/text_amit_phrase"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/text_hardeep_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="9dp"
                android:text="@string/hello"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/text_hardeep"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="27dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="27dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="27dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_hritik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="16dp"
                android:text="@string/hritik_kumar"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/text_hardeep_phrase"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/text_hritik_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="7dp"
                android:text="@string/hello"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/text_hritik"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/text_jayesh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/jayesh_budhwani"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/text_hritik_phrase"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/text_jayesh_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="9dp"
                android:text="@string/hello"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/text_jayesh"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/text_mohit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="14dp"
                android:text="@string/mohit_prajapat"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/text_jayesh_phrase"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tex_mohit_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="6dp"
                android:text="@string/hello"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/text_mohit"
                tools:ignore="SmallSp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</RelativeLayout>